--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -38,7 +38,7 @@
   version = "1.9.12"
 
 [metadata.heroku]
-  root-package = "github.com/v1nland/mafi-backend-go"
+  root-package = "mafi-backend-go"
   go-version = "1.13"
   install = [ "./..." ]
 
